# markora

./: .gitignore  README.md  comparison.html  index.html  package-lock.json  package.json  vite.config.ts
.playwright-cli/: page-2026-07-17T09-07-40-145Z.yml  page-2026-07-17T09-08-14-576Z.yml  page-2026-07-17T09-12-48-647Z.yml  page-2026-07-17T09-13-08-211Z.yml  page-2026-07-17T09-13-20-998Z.yml  page-2026-07-17T09-13-52-655Z.yml  page-2026-07-17T09-43-40-021Z.yml  page-2026-07-17T09-44-34-617Z.yml  page-2026-07-17T09-44-47-748Z.yml  page-2026-07-17T09-45-02-091Z.yml
scripts/: build-appstore.sh  build-release.sh
src/: App.tsx  editor.test.ts  editor.ts  model.test.ts  model.ts  native.ts  styles.css  titlebar.test.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
