[package]
name = "markora"
version = "0.1.0"
description = "A calm, local-first Markdown editor"
authors = ["Markora"]
edition = "2021"

[lib]
name = "markora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
